--- a/src/static/css/variables.scss
+++ b/src/static/css/variables.scss
@@ -13,8 +13,8 @@ $font-logo-size-mobile: 25px;
 
 
 // Text colors
-$color-1: #17bebb; // Headers, links and buttons
-$color-2: #2e282a; // Text color
+$color-1: #c59849; // Headers, links and buttons
+$color-2: #293241; // Text color
 
 $alt-color-1: #e282a; // Color of heading in grey section
 $alt-color-2: #fff; // Color of subheading in grey section
