--- a/src/templates/partials/partial-header.hbs
+++ b/src/templates/partials/partial-header.hbs
@@ -22,34 +22,32 @@
 
 
 
-<div class="hero hero-overlay no-grayscale hero-blend-no" style="background-image: url(assets/img/01.jpg);">
+<div class="hero hero-overlay no-grayscale hero-blend2" style="background-image: url(http://www.menselection.nl/wp-content/uploads/2014/10/barbershop-mannen-6-e1414525124957.jpg);">
 
 	{{!-- IF SLIDESHOW --}}
 
-	<div class="background_cycler">
+	{{!-- <div class="background_cycler">
 		<div class="slide-1 active" style="background-image: url(assets/img/01.jpg);"></div>
 		<div class="slide-2" style="background-image: url(assets/img/02.jpg);"></div>
 		<div class="slide-3" style="background-image: url(assets/img/03.jpg);"></div>
-	</div>
+	</div> --}}
 
 	{{!-- If client has video --}}
-	{{!-- <div class="hero-video">
+	<div class="hero-video">
 		<video loop="true" autoplay="true" muted="muted" poster="http://www.mogadorcafe.nl/wp-content/uploads/BG_01.jpg">
 			<source src="https://www.paypalobjects.com/webstatic/mktg/wright/videos/home-signup.mp4" type="video/mp4">
 				Your browser does not support the video tag.
 		</video> 
-
-		<iframe class="hero-video-iframe" src="https://player.vimeo.com/video/70403659?portrait=0&autoplay=1&title=0&badge=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen ></iframe>
-	</div> --}}
+	</div>
 	<div class="container hero-inner">
 		<div class="row">
 			<div class="col-xs-10 col-xs-offset-1 text-center">
 				{{!-- <img src="http://dummyimage.com/300x300/eee/fff.png" alt="John Doe" class="img-profile img-circle"> --}}
-				<h1 class="hero-h1">Nulla consequat massa quis enim</h1>
-				<p class="hero-first-line">Nulla consequat massa quis enim</p>
+				<h1 class="hero-h1">Barbershop.</h1>
+				<p class="hero-first-line">Haircuts <span>&amp;</span> shaves Since 1999</p>
 				{{!-- <p class="hero-second-line">{{site.intro}}.</p> --}}
-				{{!-- <a href="#" class="button button-outline-white scroll-to" data-level="about">Read more</a> --}}
-				<a href="#" class="button button-rounded scroll-to" data-level="about">Read more</a>
+				<a href="#" class="button button-rounded button-outline-white scroll-to" data-level="about">Read more</a>
+				{{!-- <a href="#" class="button scroll-to" data-level="about">Read more</a> --}}
 			</div>
 		</div>
 	</div>
