--- a/src/static/css/variables.scss
+++ b/src/static/css/variables.scss
@@ -6,30 +6,30 @@ $breakpoint-mobile: 767px;
 
 // FONTS
 $font-1: 'Montserrat', serif;	// Headings
-$font-2: 'Domine', serif;		// Text
+$font-2: 'Raleway', serif;		// Text
 $font-logo: 'Merriweather', serif;	// Logo
 $font-logo-size: 40px;
 $font-logo-size-mobile: 25px;
 
 
 // Text colors
-$color-1: #c59849; // Headers, links and buttons
-$color-2: #293241; // Text color
+$color-1: #fb4b4e; // Headers, links and buttons
+$color-2: #3e000c; // Text color
 
 $alt-color-1: #e282a; // Color of heading in grey section
 $alt-color-2: #fff; // Color of subheading in grey section
 
-$line-color: red;
+$line-color: #7c0b2b;
 
 // STREAMER
-$streamer-bg-color: #2e282a;
-$streamer-text-color: #17bebb;
+$streamer-bg-color: #3e000c;
+$streamer-text-color: #fb4b4e;
 
 // Footer
-$color-3: #221d23; // Footer background color
+$color-3: #fb4b4e; // Footer background color
 $color-4: #fff; // Footer text color
 
 // Section Light or Dark
 $section-color: #fff;	// Background-color of blocks
-$section-grey-color: #909590;
+$section-grey-color: #3e000c;
 
