--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -41,7 +41,7 @@
 	</script>
 </head>
 <body>
-	<section id="preloader">
+	<section id="preloader2">
 		<div class="site-spinner"></div>
 	</section>
 	{{> body }}
