--- a/src/templates/partials/partial-header.hbs
+++ b/src/templates/partials/partial-header.hbs
@@ -7,9 +7,10 @@
 				<nav class="navbar">
 					<button class="toggle-nav close-nav"><i class="fa fa-times" aria-hidden="true"></i></button>
 					<ul>
-						<li><a class="scroll-to" data-level="about">about</a></li>
-						<li><a class="scroll-to" data-level="products">Products</a></li>
-						<li><a class="scroll-to" data-level="gallery">Gallery</a></li>
+						<li><a class="scroll-to" data-level="about">Over ons</a></li>
+						<li><a class="scroll-to" data-level="products">Producten</a></li>
+						<li><a class="scroll-to" data-level="gallery">Impressie</a></li>
+						<li><a class="scroll-to" data-level="products">Prijzen</a></li>
 						<li><a class="scroll-to" data-level="contact">Contact</a></li>
 					</ul>
 				</nav>
@@ -22,7 +23,7 @@
 
 
 
-<div class="hero hero-overlay no-grayscale hero-blend2" style="background-image: url(http://www.menselection.nl/wp-content/uploads/2014/10/barbershop-mannen-6-e1414525124957.jpg);">
+<div class="hero hero-overlay no-grayscale hero-blend2" style="background-image: url(http://lemerg.com/data/wallpapers/21/678745.jpg);">
 
 	{{!-- IF SLIDESHOW --}}
 
@@ -33,20 +34,20 @@
 	</div> --}}
 
 	{{!-- If client has video --}}
-	<div class="hero-video">
+	{{!-- <div class="hero-video">
 		<video loop="true" autoplay="true" muted="muted" poster="http://www.mogadorcafe.nl/wp-content/uploads/BG_01.jpg">
 			<source src="https://www.paypalobjects.com/webstatic/mktg/wright/videos/home-signup.mp4" type="video/mp4">
 				Your browser does not support the video tag.
 		</video> 
-	</div>
+	</div> --}}
 	<div class="container hero-inner">
 		<div class="row">
 			<div class="col-xs-10 col-xs-offset-1 text-center">
 				{{!-- <img src="http://dummyimage.com/300x300/eee/fff.png" alt="John Doe" class="img-profile img-circle"> --}}
-				<h1 class="hero-h1">Barbershop.</h1>
-				<p class="hero-first-line">Haircuts <span>&amp;</span> shaves Since 1999</p>
-				{{!-- <p class="hero-second-line">{{site.intro}}.</p> --}}
-				<a href="#" class="button button-rounded button-outline-white scroll-to" data-level="about">Read more</a>
+				<h1 class="hero-h1">kappers.</h1>
+				<p class="hero-first-line">Since 1999</p>
+				<p class="hero-second-line">{{site.intro}}.</p>
+				<a href="#" class="button button-rounded button-outline-white scroll-to" data-level="about">Meer</a>
 				{{!-- <a href="#" class="button scroll-to" data-level="about">Read more</a> --}}
 			</div>
 		</div>
