--- a/src/static/css/base.scss
+++ b/src/static/css/base.scss
@@ -1,4 +1,4 @@
-@import 'https://fonts.googleapis.com/css?family=Montserrat:400,700|Domine:400,700|Merriweather|Dancing+Script';
+@import 'https://fonts.googleapis.com/css?family=Montserrat:400,700|Domine:400,700|Merriweather|Dancing+Script|Raleway:300,400,500';
 @import "bootstrap.css";
 @import "variables.scss";
 @import "preloader.scss";
