--- a/src/static/css/header.scss
+++ b/src/static/css/header.scss
@@ -168,7 +168,7 @@
 	position: relative;
 	overflow: hidden;
 	width: 100%;
-	height: 100%;
+	height: 75vh;
 	font-family: $font-1;
 	color: #fff;
 	text-shadow: 0px 0px 10px rgba(0,0,0,0.2);
