--- a/src/templates/partials/partial-visual.hbs
+++ b/src/templates/partials/partial-visual.hbs
@@ -1,1 +1,1 @@
-<div class="visual-bar visual-bar--fixed visual-bar--blend2" style="background-image: url(http://dummyimage.com/1440x1200/eee/fff.png)"></div>
+<div class="visual-bar visual-bar--fixed visual-bar--blend2" style="background-image: url(http://www.kcms.sk/all-images/hairstyles-for-women.jpg)"></div>
